--- a/docs/_data/social.yml
+++ b/docs/_data/social.yml
@@ -3,9 +3,7 @@
 
 
 social:
-  - {icon: 'github', type: "brand", link: 'https://www.github.com/pandasekh'}
-  - {icon: 'twitter', type: "brand", link: 'https://twitter.com/PandaSekh'}
-  - {icon: 'linkedin', type: "brand", link: 'https://www.linkedin.com/in/alessio-franceschi/'}
-  
-  - {icon: 'envelope', type: "solid", link: 'mailto:alessiofranceschi2@gmail.com'}
+  - {icon: 'github', type: "brand", link: 'https://www.github.com/telatin'}
+  - {icon: 'twitter', type: "brand", link: 'https://twitter.com/telatin'}
+  - {icon: 'linkedin', type: "brand", link: 'https://www.linkedin.com/in/andrea-telatin/'}
   - {icon: 'rss', type: "solid", link: "/feed.xml"}
