--- a/docs/_data/settings.yml
+++ b/docs/_data/settings.yml
@@ -32,7 +32,7 @@ mathjax:
 #Show related posts based on categories
 related-posts:
   active: true
-  title: "You May Also Enjoy"
+  title: "Other posts"
 
 #Comments
 comments: true
